<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HikingDetail">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/tripIv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Himalayas"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <TableRow>
                <TextView
                    android:text="@string/location_hint"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/locationTv"
                    tools:text="adf"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <TableRow>
                <TextView
                    android:text="@string/date_hint"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/dateTv"
                    tools:text="19/10/2023"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <TableRow>
                <TextView
                    android:text="@string/parking_hint"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/parkingTv"
                    tools:text="Yes"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <TableRow>
                <TextView
                    android:text="@string/length_hint"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/lengthTv"
                    tools:text="5 miles"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <TableRow>
                <TextView
                    android:text="@string/difficult_hint"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/difficultTv"
                    tools:text="Easy"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <TableRow>
                <TextView
                    android:text="@string/description_hint"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/descriptionTv"
                    tools:text="adf"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>